# Kern

./: .justfile  CHANGELOG.md  README.md  agents.md  sdkconfig.defaults.crowpanel_101  sdkconfig.defaults.wave_p4_pico
.github/workflows/: github-actions-test.yml  test-all-builds.yml  test-each-commit.yml
components/crowpanel_101/: CMakeLists.txt  crowpanel_101.c  pmic.c
components/sd_card/: CMakeLists.txt
components/sd_card/include/: sd_card.h
components/sd_card/src/: sd_card.c
components/video/: CMakeLists.txt  video.c  video.h
components/wave_35/: pmic.c
components/wave_p4_pico/: CMakeLists.txt  idf_component.yml  wave_p4_pico.c
components/wave_p4_pico/include/bsp/: display.h  esp-bsp.h  esp32_p4_pico.h
docs/: design-guidelines.md
enclosures/waveshare_4_3/: KernWaveshare4.3AlanKeyVariant-CoverPocket008.3mf  KernWaveshare4.3AlanKeyVariant.FCStd
flasher/: index.html
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/core/: camera.c  camera.h  psbt.c  ss_whitelist.c  ss_whitelist.h  storage.c  storage.h
main/core/test/: test_psbt_classify.c  test_registry_parse.c  test_ss_whitelist_is_whitelisted.c
main/pages/home/: addresses.c  home.c  load_psbt_storage.c  load_psbt_storage.h  public_key.c
main/pages/load_mnemonic/: load_menu.c
main/pages/login/: about.c  login.c  login_settings.c
main/ui/: battery.c  battery.h  dialog.c  menu.c  menu.h  theme.c  theme_palette.h  theme_widgets.c  theme_widgets.h
scripts/: ci-checks.sh
simulator/: CMakeLists.txt  README.md  lv_conf.h
simulator/data/: README.md
simulator/src/: main_sim.c
(+9 files in other folders)
